Add clangd configuration and UTF-8 conversion tools
Add automated clangd setup for enhanced C/C++ language support in Zed,
including compile_commands.json generation and .clangd configuration.
Add UTF-8 conversion tool for C/H files and automatic .gitignore
generation. Update documentation with new features and troubleshooting
guides.

--- a/.zed/tasks.json
+++ b/.zed/tasks.json
@@ -31,5 +31,23 @@
     "command": "cmd.exe",
     "args": ["/c", ".zed\\keilkilll.bat"],
     "reveal": "always"
+  },
+  {
+    "label": "Keil: clangd 配置与 compile_commands 生成",
+    "command": "cmd.exe",
+    "args": ["/c", ".zed\\clangd_config.bat"],
+    "reveal": "always"
+  },
+  {
+    "label": "Keil: 生成 .gitignore 文件",
+    "command": "cmd.exe",
+    "args": ["/c", ".zed\\gitignore_config.bat"],
+    "reveal": "always"
+  },
+  {
+    "label": "Keil: 转换所有 C/H 文件为 UTF-8",
+    "command": "cmd.exe",
+    "args": ["/c", ".zed\\keil_utf8conv.bat"],
+    "reveal": "always"
   }
 ]
