feat: 添加终端任务并更新clangd配置
添加新的终端任务到tasks.json，并更新clangd配置以支持标准库和抑制更多错误类型

--- a/.zed/tasks.json
+++ b/.zed/tasks.json
@@ -49,5 +49,11 @@
     "command": "cmd.exe",
     "args": ["/c", ".zed\\keil\\keil_utf8conv.bat"],
     "reveal": "always"
+  },
+  {
+    "label": "terminal",
+    "command": "cmd.exe",
+    "args": [],
+    "reveal": "always"
   }
 ]
